apollo-federation/tests/snapshots/main__composition_tests__can_compose_supergraph-2.snap
---
source: apollo-federation/tests/composition_tests.rs
expression: print_sdl(supergraph.to_api_schema().unwrap().schema())
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

directive @stream(label: String, if: Boolean! = true, initialCount: Int = 0) on FIELD

enum E {
  V1
  V2
}

scalar Import

type Query {
  t: T
}

type S {
  x: Int
}

type T {
  k: ID
  a: Int
  b: String
}

union U = S | T
