apollo-federation/tests/snapshots/main__composition_tests__can_compose_with_descriptions-2.snap
---
source: apollo-federation/tests/composition_tests.rs
expression: print_sdl(supergraph.to_api_schema().unwrap().schema())
---
"""A cool schema"""
schema {
  query: Query
}

directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

"""The foo directive description"""
directive @foo(url: String) on FIELD

directive @stream(label: String, if: Boolean! = true, initialCount: Int = 0) on FIELD

"""An enum"""
enum E {
  """The A value"""
  A
  """The B value"""
  B
}

scalar Import

"""
Available queries
Not much yet
"""
type Query {
  """Returns tea"""
  t(
    """An argument that is very important"""
    x: String!,
  ): String
}
