apollo-federation/tests/snapshots/main__composition_tests__compose_removes_federation_directives-2.snap
---
source: apollo-federation/tests/composition_tests.rs
expression: print_sdl(supergraph.to_api_schema().unwrap().schema())
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

directive @stream(label: String, if: Boolean! = true, initialCount: Int = 0) on FIELD

scalar Import

type Product {
  sku: String!
  name: String!
}

type Query {
  products: [Product!]
}
